--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span class="heading-primary-main">Outdoors</span>
                     <span class="heading-primary-sub">is where life happens</span>
                 </h1>
-                
+                <a href="#" class="btn btn-white">Dicover out tours</a>
             </div>
         </header>
     </body>
