--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary-main">Outdoors</span>
-                    <span class="heading-primary-sub">is where life happens</span>
+                    <span class="heading-primary--main">Outdoors</span>
+                    <span class="heading-primary--sub">is where life happens</span>
                 </h1>
                 <a href="#" class="btn btn--white btn--animated">Dicover out tours</a>
             </div>
