--- a/Natours/index.html
+++ b/Natours/index.html
@@ -254,6 +254,31 @@
                     </div>
                 </div>
             </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now!
+                                    </h2>
+                                </div>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" id="name" placeholder="Full Name" required>
+                                    <!-- the "for" attribute is related with the input id -->
+                                    <label for="name" class="form__label">Full name</label> 
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" id="email" placeholder="Email address" required>
+                                    <!-- the "for" attribute is related with the input id -->
+                                    <label for="email" class="form__label">Email address</label> 
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!--
             <section class="grid-test">
