--- a/Natours/index.html
+++ b/Natours/index.html
@@ -261,7 +261,7 @@
                             <form action="#" class="form">
                                 <div class="u-margin-bottom-medium">
                                     <h2 class="heading-secondary">
-                                        Start booking now!
+                                        Start booking now
                                     </h2>
                                 </div>
                                 <div class="form__group">
@@ -273,6 +273,27 @@
                                     <input type="email" class="form__input" id="email" placeholder="Email address" required>
                                     <!-- the "for" attribute is related with the input id -->
                                     <label for="email" class="form__label">Email address</label> 
+                                </div>
+                                <div class="form__group">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group
+                                        </label>
+                                    </div>
+                                    <div class="form__radio-group u-margin-bottom-medium">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn btn--green">
+                                        Next step &rarr;
+                                    </button>
                                 </div>
                             </form>
                         </div>
