Animation to close the pop and finished the section without responsibe design

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -147,7 +147,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$299</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -211,14 +211,14 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$299</p>
                                     </div>
-                                    <a href="" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="" class="btn btn--green">Discover all tours</a>
+                    <a href="#section-tours" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
             <section class="section-stories">
@@ -350,19 +350,20 @@
                 </div>
             </div>
         </footer>
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
                     <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">Strat booking now</h2>
                     <h2 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h2>
                     <p class="popup__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tristique senectus et netus et. Gravida dictum fusce ut placerat orci nulla. Volutpat ac tincidunt vitae semper quis lectus nulla. Semper feugiat nibh sed pulvinar proin gravida hendrerit. Cras ornare arcu dui vivamus arcu felis bibendum ut tristique. Scelerisque in dictum non consectetur a erat nam at. Varius morbi enim nunc faucibus. Ultricies mi quis hendrerit dolor magna eget. Sed faucibus turpis in eu. Fringilla est ullamcorper eget nulla facilisi etiam dignissim. Dolor magna eget est lorem ipsum dolor. Morbi blandit cursus risus at ultrices mi tempus.
                     </p>
-                    <a href="#" class="btn btn--green">Book now</a>
+                    <a href="#popup" class="btn btn--green">Book now</a>
                 </div>
             </div>
         </div>
