--- a/Trillo/index.html
+++ b/Trillo/index.html
@@ -44,8 +44,8 @@
             <div class="content">
                 <nav class="sidebar">
                     <ul class="side-nav">
-                        <li class="side-nav__item">
-                            <a href="#" class="sode-nav__link">
+                        <li class="side-nav__item side-nav__item--active">
+                            <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-home"></use>
                                 </svg>
@@ -53,7 +53,7 @@
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="#" class="sode-nav__link">
+                            <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
                                 </svg>
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="#" class="sode-nav__link">
+                            <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-key"></use>
                                 </svg>
@@ -69,7 +69,7 @@
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="#" class="sode-nav__link">
+                            <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-map"></use>
                                 </svg>
