--- a/Nexter/index.html
+++ b/Nexter/index.html
@@ -121,7 +121,7 @@
                     </svg>
                     <p>$1,200,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-2.jpeg" alt="House 2" class="home__img">
@@ -153,7 +153,7 @@
                     </svg>
                     <p>$2,750,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-3.jpeg" alt="House 3" class="home__img">
@@ -185,7 +185,7 @@
                     </svg>
                     <p>$850,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-4.jpeg" alt="House 4" class="home__img">
@@ -217,7 +217,7 @@
                     </svg>
                     <p>$1,950,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-5.jpeg" alt="House 5" class="home__img">
@@ -249,7 +249,7 @@
                     </svg>
                     <p>$9,500,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
             <div class="home">
                 <img src="img/house-6.jpeg" alt="House 6" class="home__img">
@@ -281,7 +281,7 @@
                     </svg>
                     <p>$600,000</p>
                 </div>
-                <button class="cta">Contac realtor</button>
+                <button class="btn home__btn">Contac realtor</button>
             </div>
         </section>
         <section class="gallery">
